# circuitree

./: .buildinfo  .gitignore  CNAME  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/getting_started/: installation.doctree  tutorial_1_getting_started.doctree
.doctrees/nbsphinx/getting_started/: tutorial_1_getting_started.ipynb
.doctrees/nbsphinx/user_guide/: tutorial_2_mcts_in_parallel.ipynb
.doctrees/nbsphinx/user_guide/defining_search_spaces/: custom_grammars.ipynb
.doctrees/user_guide/: api.doctree  tutorial_2_mcts_in_parallel.doctree
.doctrees/user_guide/defining_search_spaces/: built_in_grammars.doctree  custom_grammars.doctree  index.doctree
.github/workflows/: documentation.yml
_sources/getting_started/: installation.rst.txt
_sources/user_guide/: api.rst.txt
_sources/user_guide/defining_search_spaces/: built_in_grammars.rst.txt  custom_grammars.ipynb.txt  index.rst.txt
circuitree/: __init__.py  circuitree.py  grammar.py  metrics.py  models.py  modularity.py  parallel.py  parallel_utils.py  regret.py  rewards.py  utils.py  viz.py
circuitree/cloud_example/: bistability.py  celery.py  celeryconfig.py  cloud_app.py  main_tasks.py  run_search_on_cloud.py  tasks.py  worker_tasks.py
circuitree/examples/: __init__.py  app.py  distributed.py  main_app.py  main_tasks.py  sequential.py  tutorial_cloud_app.py  tutorial_cloud_main.py  worker_app.py
doc/: conf.py  index.rst  installation.rst
doc/_templates/: breadcrumbs.html  footer.html
doc/getting_started/: bistability.py  bistability_app.py  bistability_parallel.py  installation.rst  run_search.py  run_search_parallel.py  tutorial-1-getting-started.ipynb  tutorial-2-mcts-in-parallel.ipynb  tutorial_1_getting_started.ipynb  tutorial_2_mcts_in_parallel.ipynb
doc/user_guide/: api.rst  parallelization.rst  tutorial_2_mcts_in_parallel.ipynb
doc/user_guide/defining_search_spaces/: built_in_grammars.rst  custom_grammars.ipynb  custom_grammars.rst  index.rst
examples/: quick_start.ipynb
getting_started/: installation.html  tutorial_1_getting_started.html
models/binary_tree/: analyze_binary_search.py  binary_tree.py  config.json  experiment.py  plot_binary_modularity_estimate_vs_time.py  plot_binary_regret_rate_vs_modularity.py  plot_binary_regret_vs_time.py  run_binary_search.py  test_binary_mt.py  test_binary_search.py
models/hex/: hex_geometry.py  hex_test_oscillators.py  hex_tissue.py  viz.py
models/oscillation/: _tau_leaping.py  analyze_acf_extrema.py  analyze_runtime.py  generate_3tf_dag.py  generate_genotype_queue.py  generate_param_queue.py  gillespie.py  hiveplot_3tf_dag.py  oscillation.py  oscillation_parallel.py  plot_3tf_dag.py  plot_acf_extrema.py  run_bfs_arrayjob.py  run_bfs_parallel.py  run_bfs_parallel_mp.py  run_mcts_parallel.py  search.py  test_oscillation.py
models/polarization/: plot_mcts_batchsize.py  plot_mcts_bfs.py  plot_mcts_vs_exploration.py  plot_polarization_dag.py  polarization.py  polarization2_data.csv  run_bfs_parallel.py  run_mcts_bfs.py  run_mcts_parallel.py
tutorials/: tutorial-1-getting-started.ipynb  tutorial-2-mcts-in-parallel.ipynb  tutorial_2_cloud_example.py  tutorial_2_parallel_example.py  tutorial_app.py  tutorial_cloud_app.py  tutorial_cloud_main.py
user_guide/: api.html  tutorial_2_mcts_in_parallel.html
user_guide/defining_search_spaces/: built_in_grammars.html  custom_grammars.html  index.html
