[tool.poetry]
name = "circuitree"
version = "0.1.0"
description = "Genetic circuit design using Monte Carlo tree search"
authors = ["pranav-bhamidipati <pbhamidi@usc.edu>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.0"
networkx = "^3.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.12.0"
black = "^23.3.0"
line-profiler = { extras = ["python"], version = "^4.0.3" }
fastapi = "^0.95.0"
ipykernel = "^6.23.1"
tuna = "^0.5.11"
jupyterlab = "^4.0.0"
ipywidgets = "^8.0.6"
dask = { extras = ["distributed"], version = "^2023.5.0" }
nodejs = "^0.1.1"
ipympl = "^0.9.3"
dask-labextension = "^6.1.0"
ray = { extras = ["default"], version = "^2.4.0" }
tables = "^3.8.0"
biocircuits = "^0.1.11"
more-itertools = "^9.1.0"
seaborn = "^0.12.2"
pyarrow = "^12.0.0"
sacred = "^0.8.4"
h5py = "^3.8.0"
datashader = "^0.14.4"
hiveplotlib = "^0.21"
psutil = "^5.9.4"
matplotlib = "^3.7.1"
pandas = "^2.0.0"
numba = "^0.56.4"
scipy = { python = ">=3.10,<3.12", version = "^1.10.1" }
tqdm = "^4.65.0"

[tool.poetry.extras]
examples = [
    "scipy",
    "numba",
    "psutil",
    "ray",
    "pandas",
    "tables",
    "pyarrow",
    "h5py",
    "more-itertools",
    "matplotlib",
    "seaborn",
    "tqdm",
]
parallel = ["psutil", "ray", "pandas", "tables", "pyarrow", "h5py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
prefer-active-python = true
